<resources>
    <string name="app_name">Zest</string>

    //login fragment
    <string name="login_header">Welcome Back</string>
    <string name="login_sub_header">Log in to continue to Zest</string>
    <string name="email_or_username">Email or Username</string>
    <string name="email_or_username_placeholder">enter your email</string>
    <string name="password">Password</string>
    <string name="password_placeholder">enter your password</string>
    <string name="log_in_button">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_button">Sign up</string>

    //register fragment
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_fragment_header">Create Account</string>
    <string name="register_fragment_subheader">Join the community of cooking lovers</string>
    <string name="create_password_placeholder">Create a password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_placeholder">Confirm your password</string>
    <string name="already_have_an_account">Already have an account?</string>

    //create recipe fragment
    <string name="create_recipe_title">New Recipe</string>
    <string name="add_dish_photo_title">Add dish photo</string>
    <string name="add_dish_photo_subtitle">Showcase your masterpiece</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_title_placeholder">e.g., Rustic Sourdough Bread</string>
    <string name="time_title">Time (in mins)</string>
    <string name="time_placeholder">e.g. 30</string>
    <string name="servings_title">Servings</string>
    <string name="servings_placeholder">e.g. 4</string>
    <string name="difficulty_title">Difficulty</string>
    <string name="select_difficulty_placeholder">Select difficulty</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="qty">Qty</string>
    <string name="item_name_placeholder">Item name</string>
    <string name="items_counter">0 items</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="empty_step_pos">1</string>
    <string name="add_step_button">Add Step</string>
    <string name="instruction_text_placeholder">What\'s the next instruction?</string>
    <string name="steps_title">Preparation Steps</string>
    <string name="tags_title">Tags</string>

    //feed fragment
    <string name="explore_title">Explore</string>
    <string name="search_recipes_placeholder">Search recipes, tags…</string>

    //filters fragment
    <string name="filters_title">Filters</string>
    <string name="making_time_title">Making Time</string>
    <string name="reset_button">Reset</string>
    <string name="apply_button">Apply</string>
    <string name="created_by">Created by</string>
    <string name="api_tag_title">Spoonacular</string>

    //recipe details fragment
    <string name="time_short_title">time</string>
    <string name="instructions_title">instructions</string>

    //profile fragment
    <string name="profile_title">Profile</string>
    <string name="display_name">Display name</string>
    <string name="bio">Bio</string>
</resources>