<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FAFAF9"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardSection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:cardElevation="25dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        android:clipToOutline="true"
        app:shapeAppearanceOverlay="@style/TopImageShape"
        tools:targetApi="31">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/welcome_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_arrow"
            android:layout_width="50dp"
            android:layout_margin="15dp"
            android:layout_height="60dp"
            app:cornerRadius="25dp"
            android:gravity="center"
            app:backgroundTint="@color/white_transparent"
            android:layout_gravity="top"

            android:backgroundTint="@color/white_transparent"
            app:icon="@drawable/arrow_back"
            app:iconTint="@color/white"
            app:strokeWidth="0dp"
            android:elevation="6dp"
            />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            app:cardCornerRadius="35dp"
            android:clickable="false"
            android:focusable="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/logo"
                    android:layout_marginEnd="12dp"/>

                <TextView
                    android:text="@string/app_name"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cardSection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHorizontal_bias="0.5"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="32dp">

        <TextView
            android:text="@string/login_header"
            android:textAlignment="center"
            android:textSize="38sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_sub_header"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginVertical="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_or_username"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/black" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextField"
                    app:startIconDrawable="@drawable/mail"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    app:boxBackgroundColor="@color/white"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_or_username_placeholder">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                app:startIconDrawable="@drawable/lock"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxBackgroundColor="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_placeholder">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/log_in_button"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:cornerRadius="16dp"
            android:backgroundTint="#2F5D3B"
            android:layout_marginVertical="15dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_button"
                android:textStyle="bold"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>